--- a/buoi7.html
+++ b/buoi7.html
@@ -489,7 +489,7 @@
           </ul>
 
     <!-- Part 5 -->
-    <section class="section feature" style="background-color: rgb(21, 26, 34); height: 1800px"  aria-labelledby="feature-label">
+    <section class="section feature" style="background-color: rgb(21, 26, 34); height: 1800px; width: 1000px;"  aria-labelledby="feature-label">
         <div class="container">
 
 
